[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pockettracing"
authors = [{name = "Tin Tvrtkovic", email = "tin@high.rs"}]
classifiers = ["License :: OSI Approved :: MIT License"]
version = "22.1.0.dev0
dynamic = ["description"]
dependencies = [
    "attrs",
    "aiohttp",
    "orjson",
]

[project.urls]
Home = "https://github.com/pocketzworld/pockettracing"
