
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pockettracing"
description = "a minimal tracer library"
authors = [{name = "Tin Tvrtkovic", email = "tin@high.rs"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "orjson",
]

[project.urls]
Home = "https://github.com/pocketzworld/pockettracing"


[tool.hatch.build.targets.wheel.hooks.mypyc]
enable-by-default = false
dependencies = ["hatch-mypyc>=0.9.1"]
require-runtime-dependencies = true
mypy-args = [
  "--no-warn-unused-ignores",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pockettracing/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]